fix: frameOutside and overflow in select

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -6,5 +6,3 @@ $blue: #001AFF;
 $red: #D94D49;
 $grey: #C9C9C8;
 $dark-grey: #9c9c9c;
-$color: rgba(240, 234, 229, 0.5);
-$color1: rgba(240, 234, 229, 0);
